--- a/chat/changelog.txt
+++ b/chat/changelog.txt
@@ -845,7 +845,7 @@ Bugfixes:
 - Fixed mybb integration database connection. Connection details should be pulled automatically now.
 - Fidex mybb integration guest logins to accept guests that don't enter a username (assign numbers like other versions).
 
-Version 0.8.8 (?.?.2014)
+Version 0.8.8 (17.04.2016)
 -------------------------------
 Notice:
 - Templates, especially loggedIn.html have changed a lot to add mobile support. Javascript in the templates files has also changed.
@@ -866,6 +866,7 @@ Bugfixes:
 - Nesting an [IMG] inside a [URL] tag will now only open the URL instead of also opening the image - thanks to James Almer.
 - Users can now be kicked for 0 minutes, which is effectively a kick and not a ban - thanks to micheal-swiggs.
 - User list sorting is now case insensitive (lists should be properly alphabetical) - thanks to marquisite.
+- MyBB forums were not showing up correctly in the room list.
 
 Misc:
 - Removed unneeded call to mt_srand() - thanks to Joshua Embrey.
